# ultragravity

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  constraints.txt  main.py  phase0.md  phase1.md  phase10.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md  phases2.md  plan2.md  pyproject.toml  requirements.txt  run.sh  test_desktop_notes.py  ultragravity.config.yaml
agent/: bridge_applescript.py  browser.py  core.py  desktop.py  humanizer.py  vision.py
data/: setup_state.json  ultragravity_memory.db
data/whatsapp_profile/: Local State
docs/adr/: 0001-architecture-boundaries.md  0002-safety-first-execution.md  0003-budget-aware-provider-usage.md  README.md
docs/operations/: incident_playbook.md  (+2 more)
reports/: phase10_benchmark_report.json  phase10_benchmark_report.md  release_candidate.md  release_signoff_phase10.md
scripts/: benchmark_phase10.py  inspect_whatsapp_ui.applescript  send_whatsapp_guarded.applescript  send_whatsapp_menu.applescript  whatsapp_send_message.py  whatsapp_send_native.py
skills/: __init__.py  base.py  contact_map.py  desktop_control.py  extraction.py  navigation.py  search.py  whatsapp.py
tools/: terminal.py
ultragravity/: __init__.py  __main__.py  actions.py  audit.py  budget.py  call_reduction.py  cli.py  config.py  context_shaper.py  diagnostics.py  executor.py  gateway.py  permissions.py  planner.py  policy.py  prompt_library.py  reliability.py  scheduler.py  state_machine.py  telemetry.py
ultragravity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+149 files in other folders)
